Working on JSON code

--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -1,4 +1,9 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@using System.Globalization;
+
+@inject IViewLocalizer Localizer
+
+@{
     ViewData["Title"] = @Localizer["Contact"];
 }
 <h2>@ViewData["Title"].</h2>
