Fixes for review. Only one ViewModel for UserManagement.

--- a/Views/UserManagement/Roles.cshtml
+++ b/Views/UserManagement/Roles.cshtml
@@ -1,4 +1,4 @@
-@model NetCoreBootstrap.Models.Views.UserManagementRolesViewModel
+@model NetCoreBootstrap.Models.Views.UserManagementViewModel
 
 <h3>Roles</h3>
 <table>
