--- a/Views/UserManagement/Users.cshtml
+++ b/Views/UserManagement/Users.cshtml
@@ -1,6 +1,6 @@
 @using NetCoreBootstrap.Models.Database
 @using Microsoft.AspNetCore.Identity
-@model NetCoreBootstrap.Models.Views.UserManagementUsersViewModel
+@model NetCoreBootstrap.Models.Views.UserManagementViewModel
 @inject UserManager<User> userManager
 
 <h3>Users</h3>
