--- a/Views/UserManagement/CreateRole.cshtml
+++ b/Views/UserManagement/CreateRole.cshtml
@@ -1,4 +1,4 @@
-@model NetCoreBootstrap.Models.Views.UserManagementCreateRoleViewModel
+@model NetCoreBootstrap.Models.Views.UserManagementViewModel
 
 <h3>Create role</h3>
 @using (Html.BeginForm("CreateRole", "UserManagement", FormMethod.Post))
@@ -8,7 +8,6 @@
         @Html.EditorFor(model => model.Name)
         @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger"})
     </div>
-
     <div class='form-group'>
         <input type='submit' value='Create role'/>
     </div>
