--- a/Views/UserManagement/CreateRole.cshtml
+++ b/Views/UserManagement/CreateRole.cshtml
@@ -3,11 +3,7 @@
 <h3>Create role</h3>
 @using (Html.BeginForm("CreateRole", "UserManagement", FormMethod.Post))
 {  
-    <div class='form-group'>
-        @Html.DisplayFor(model => model.Name)
-        @Html.EditorFor(model => model.Name)
-        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger"})
-    </div>
+    @Html.Partial("_EditRoleForm", Model);
     <div class='form-group'>
         <input type='submit' value='Create role'/>
     </div>
