--- a/Views/UserManagement/Users.cshtml
+++ b/Views/UserManagement/Users.cshtml
@@ -10,7 +10,7 @@
             <th>Username</th>
             <th>Email</th>
             <th>Roles</th>
-            <th>Options</th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -20,7 +20,9 @@
                 <td>@Html.DisplayFor(model => user.UserName)</td>
                 <td>@Html.DisplayFor(model => user.Email)</td>
                 <td>@String.Join(",", await userManager.GetRolesAsync(user))</td>
-                <td>@Html.ActionLink("Add Role", "AddRole", "UserManagement", new { userId = user.Id })</td>
+                <td>
+                    @Html.ActionLink("Add Role", "AddRole", "UserManagement", new { userId = user.Id })
+                </td>
             </tr>
         }
     </tbody>
