--- a/Views/Account/AccessDenied.cshtml
+++ b/Views/Account/AccessDenied.cshtml
@@ -1,8 +1,12 @@
+@using Microsoft.AspNetCore.Mvc.Localization
+@using System.Globalization;
+@inject IViewLocalizer Localizer
+
 @{
-    ViewData["Title"] = "Access Denied";
+    ViewData["Title"] = @Localizer["AccessDenied"];
 }
 
 <header>
-    <h1 class="text-danger">Access Denied.</h1>
-    <p class="text-danger">You do not have access to this resource.</p>
+    <h1 class="text-danger">@Localizer["AccessDenied"]</h1>
+    <p class="text-danger">@Localizer["AccessDeniedDescription"]</p>
 </header>
