--- a/Views/UserManagement/EditRole.cshtml
+++ b/Views/UserManagement/EditRole.cshtml
@@ -1,11 +1,14 @@
+@using Microsoft.AspNetCore.Mvc.Localization
+@using System.Globalization;
 @model NetCoreBootstrap.Models.Views.UserManagementViewModel
+@inject IViewLocalizer Localizer
 
-<h3>Edit role</h3>
+<h3>@Localizer["EditRole"]</h3>
 @using (Html.BeginForm("EditRole", "UserManagement", FormMethod.Post))
 {  
 	@Html.HiddenFor(model => model.RoleId)
     @Html.Partial("_EditRoleForm", Model);
     <div class='form-group'>
-        <input type='submit' value='Save changes'/>
+        <input type='submit' value='@Localizer["SaveChanges"]'/>
     </div>
 }
