--- a/Views/UserManagement/RoleManager.cshtml
+++ b/Views/UserManagement/RoleManager.cshtml
@@ -1,22 +1,16 @@
+@using Microsoft.AspNetCore.Mvc.Localization
+@using System.Globalization;
 @model NetCoreBootstrap.Models.Views.RoleManagerViewModel
+@inject IViewLocalizer Localizer
 
-<h3>Role manager</h3>
+<h3>@Localizer["RoleManager"]</h3>
 
 <div>
-	<h4>Users</h4>
+	<h4>@Localizer["Users"]</h4>
 	@Html.ListBox("UserList", Model.UsersListItem, new { @class = "user-list" })
 </div>
 
 <div class='user-roles'>
-	<h4>Roles</h4>
+	<h4>@Localizer["RoleManager"]</h4>
 	@{ Html.RenderPartial("_UserRoles", Model); }
 </div>
-
-<script type='text/javascript'>
-$(function() 
-{
-	$(".user-list").on('change', function(){
-		$(".user-roles").load('http://localhost:5000/UserManagement/ViewRoles?userId=' + $(this).val());
-	});
-});
-</script>
