--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -2,7 +2,6 @@
 @using NetCoreBootstrap.Models.Views
 @using NetCoreBootstrap.Models.Database
 @model LoginViewModel
-@inject SignInManager<User> SignInManager
 
 @using (Html.BeginForm("Login", "Account", FormMethod.Post))
 {
@@ -27,12 +26,11 @@
     </div>
 }
 @{
-    var loginProviders = SignInManager.GetExternalAuthenticationSchemes().ToList();
     @using (Html.BeginForm("ExternalLogin", "Account", FormMethod.Post))
     {
-        foreach (var provider in loginProviders)
+        foreach (var provider in Model.loginProviders)
         {
-            <button type="submit" class="btn btn-default" name="provider" value="@provider.AuthenticationScheme" title="Log in using your @provider.DisplayName account">@provider.AuthenticationScheme</button>
+            <button type="submit" class="btn btn-default" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.Name</button>
         }
     }
 }
