--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -28,7 +28,7 @@
 @{
     @using (Html.BeginForm("ExternalLogin", "Account", FormMethod.Post))
     {
-        foreach (var provider in Model.loginProviders)
+        foreach (var provider in Model.LoginProviders)
         {
             <button type="submit" class="btn btn-default" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.Name</button>
         }
