Fix on users view

--- a/Views/UserManagement/Users.cshtml
+++ b/Views/UserManagement/Users.cshtml
@@ -1,7 +1,7 @@
 @using NetCoreBootstrap.Models.Database
 @using Microsoft.AspNetCore.Identity
 @model NetCoreBootstrap.Models.Views.UserManagementViewModel
-@inject UserManager<User> userManager
+
 <h3>Users</h3>
 <table>
     <thead>
@@ -17,7 +17,14 @@
             <tr>
                 <td>@Html.DisplayFor(model => user.UserName)</td>
                 <td>@Html.DisplayFor(model => user.Email)</td>
-                <td>@String.Join(",", user.Roles)</td>
+                @{
+                    List<string> roles = new List<string>();
+                    foreach(var role in user.UserRoles)
+                    {
+                        roles.Add(role.Role.Name);
+                    }
+                }
+                <td>@String.Join(",", roles)</td>
             </tr>
         }
     </tbody>
