Revert "Fixes on Role Manager"
This reverts commit 2a3c81d93a45a3c8143de07ad503ad65b88f13e2.

--- a/Views/UserManagement/Users.cshtml
+++ b/Views/UserManagement/Users.cshtml
@@ -19,7 +19,7 @@
                 <td>@Html.DisplayFor(model => user.Email)</td>
                 @{
                     List<string> roles = new List<string>();
-                    foreach(var role in user.Roles)
+                    foreach(var role in user.UserRoles)
                     {
                         roles.Add(role.Role.Name);
                     }
