--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -27,12 +27,11 @@
     </div>
 }
 @{
-    var loginProviders = SignInManager.GetExternalAuthenticationSchemes().ToList();
     @using (Html.BeginForm("ExternalLogin", "Account", FormMethod.Post))
     {
-        foreach (var provider in loginProviders)
+        foreach (var provider in Model.LoginProviders)
         {
-            <button type="submit" class="btn btn-default" name="provider" value="@provider.AuthenticationScheme" title="Log in using your @provider.DisplayName account">@provider.AuthenticationScheme</button>
+            <button type="submit" class="btn btn-default" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.Name</button>
         }
     }
 }
