Migrate to netcore 2.1

--- a/src/Views/UserManagement/CreateRole.cshtml
+++ b/src/Views/UserManagement/CreateRole.cshtml
@@ -6,7 +6,7 @@
 <h3>@Localizer["CreateRole"]</h3>
 @using (Html.BeginForm("CreateRole", "UserManagement", FormMethod.Post))
 {  
-    @Html.Partial("_EditRoleForm", Model);
+    <partial name="_EditRoleForm" model="Model"/>
     <div class='form-group'>
         <input type='submit' value='@Localizer["CreateRole"]'/>
     </div>
