--- a/src/Views/UserManagement/RoleManager.cshtml
+++ b/src/Views/UserManagement/RoleManager.cshtml
@@ -12,5 +12,5 @@
 
 <div class='user-roles'>
 	<h4>@Localizer["RoleManager"]</h4>
-	@{ Html.RenderPartial("_UserRoles", Model); }
+    <partial name="_UserRoles" model="Model"/>
 </div>
